--- a/idcard.html
+++ b/idcard.html
@@ -1,260 +1,251 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ID Card Generator | Noorussalam Madrasa</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Noorussalam Madrasa — ID Card Generator</title>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<style>
-body {
-    background: linear-gradient(135deg, #0b5ed7 0%, #74b9ff 100%);
-    font-family: 'Poppins', sans-serif;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 30px;
-}
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
-.id-form {
-    background: #fff;
-    border-radius: 15px;
-    box-shadow: 0 5px 20px rgba(0,0,0,0.2);
-    padding: 30px;
-    width: 100%;
-    max-width: 420px;
-    text-align: center;
-    animation: fadeIn 0.8s ease;
-}
+  <style>
+    :root{ --primary:#0b5ed7; --primary-dark:#0849a2; --card-width:328px; --card-height:205px; } /* 86×54 mm -> px approximated */
+    body {
+      font-family: "Poppins",sans-serif;
+      min-height:100vh;
+      margin:0;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background: linear-gradient(135deg, var(--primary) 0%, #74b9ff 100%);
+      padding:28px;
+    }
 
-.id-form h2 {
-    color: #0b5ed7;
-    font-weight: 700;
-}
+    .id-form {
+      width:100%;
+      max-width:460px;
+      background: #fffafc;
+      padding:28px;
+      border-radius:18px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.18);
+      text-align:center;
+    }
 
-.id-form button {
-    background: #0b5ed7;
-    border: none;
-    padding: 10px 0;
-    width: 100%;
-    border-radius: 8px;
-    font-weight: 600;
-    color: #fff;
-}
+    .id-form img { margin-bottom:8px; }
+    .id-form h1 { font-size:1.05rem; color:var(--primary); margin:0 0 8px; font-weight:700; text-transform:uppercase; }
+    .id-form p { color:#556; margin-bottom:18px; }
 
-@keyframes fadeIn {
-    from {opacity:0; transform: translateY(-10px);}
-    to   {opacity:1; transform: translateY(0);}
-}
-</style>
+    .form-control { border-radius:10px; height:46px; }
+    .btn-generate {
+      background: linear-gradient(90deg,var(--primary),#167bff);
+      border: none;
+      color:#fff;
+      font-weight:600;
+      height:46px;
+      border-radius:10px;
+      box-shadow: 0 8px 20px rgba(11,94,215,0.28);
+    }
+    .btn-generate:hover { background: var(--primary-dark); transform:translateY(-2px); }
+
+    small.hint { display:block; margin-top:10px; color:#999; }
+
+    /* small responsive */
+    @media (max-width:520px){
+      .id-form{ padding:20px; border-radius:14px; }
+    }
+  </style>
 </head>
-
 <body>
 
-<div class="id-form">
-    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="80">
-    <h2>NOORUSSALAM MADRASA</h2>
-    <p>Enter your Class and Roll Number to generate your ID card</p>
+  <div class="id-form">
+    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" alt="logo" width="86">
+    <h1>NOORUSSALAM MADRASA</h1>
+    <p>Enter Class and Roll Number to generate the ID card (opens in new tab)</p>
 
-    <form id="idForm">
-        <div class="mb-3 text-start">
-            <label class="form-label">Class</label>
-            <input type="text" name="class" class="form-control" required>
-        </div>
+    <form id="idForm" class="mt-3">
+      <div class="mb-3 text-start">
+        <label class="form-label">Class</label>
+        <input name="class" class="form-control" placeholder="e.g. 7A or 8" required>
+      </div>
 
-        <div class="mb-3 text-start">
-            <label class="form-label">Roll Number</label>
-            <input type="text" name="roll" class="form-control" required>
-        </div>
+      <div class="mb-3 text-start">
+        <label class="form-label">Roll Number</label>
+        <input name="roll" class="form-control" placeholder="e.g. 12" required inputmode="numeric" pattern="[0-9]*">
+      </div>
 
-        <button type="submit">Generate Digital ID Card</button>
+      <button type="submit" class="btn btn-generate w-100">Generate Digital ID Card</button>
+      <small class="hint">Printed card size: 86 × 54 mm (CR-80). Use 'Print' in the new tab for best results.</small>
     </form>
-</div>
+  </div>
 
 <script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec";
+/*
+  Replace SCRIPT_URL with your deployed Apps Script web app URL if different.
+  The script is expected to respond with JSON:
+  { result: "success", student: { FullName, UID, AdmissionNumber, FatherName, ClassLevel, RollNumber, Phone, Address, PhotoURL } }
+*/
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec";
 
-document.getElementById("idForm").addEventListener("submit", async (e) => {
-    e.preventDefault();
+document.getElementById('idForm').addEventListener('submit', async (ev) => {
+  ev.preventDefault();
+  const form = new FormData(ev.target);
+  const cls = form.get('class').trim();
+  const roll = form.get('roll').trim();
+  if (!cls || !roll) return alert('Please enter class and roll number.');
 
-    const form = new FormData(e.target);
-    const classVal = form.get("class");
-    const rollVal = form.get("roll");
+  const url = `${SCRIPT_URL}?class=${encodeURIComponent(cls)}&roll=${encodeURIComponent(roll)}`;
 
-    const url = `${scriptURL}?class=${encodeURIComponent(classVal)}&roll=${encodeURIComponent(rollVal)}`;
+  // open blank tab first to avoid popup blocking
+  const win = window.open('', '_blank');
+  win.document.write(`<div style="font-family:Poppins, sans-serif; text-align:center; padding:40px; color:${'#0b5ed7'}"><h3>Loading ID Card...</h3></div>`);
 
-    const win = window.open("", "_blank");
-    win.document.write("<h3 style='text-align:center;color:#0b5ed7;font-family:Poppins;'>Loading ID Card...</h3>");
+  try {
+    const res = await fetch(url);
+    const data = await res.json();
 
-    try {
-        const res = await fetch(url);
-        const data = await res.json();
+    if (!data || data.result !== 'success') {
+      const msg = (data && data.message) ? data.message : 'Student not found or server error.';
+      win.document.body.innerHTML = `<h3 style="color:red; text-align:center; font-family:Poppins;">${msg}</h3>`;
+      return;
+    }
 
-        if (data.result !== "success") {
-            win.document.body.innerHTML =
-                `<h3 style='color:red;text-align:center;'>${data.message}</h3>`;
-            return;
-        }
+    const s = data.student || {};
+    // fallback values
+    s.FullName = s.FullName || 'STUDENT NAME';
+    s.UID = s.UID || '';
+    s.AdmissionNumber = s.AdmissionNumber || '';
+    s.FatherName = s.FatherName || '';
+    s.ClassLevel = s.ClassLevel || cls;
+    s.RollNumber = s.RollNumber || roll;
+    s.Phone = s.Phone || '';
+    s.Address = s.Address || '';
+    s.PhotoURL = s.PhotoURL || 'https://via.placeholder.com/200';
 
-        const s = data.student;
-
-        const html = `
-<!DOCTYPE html>
+    // build ID card html (no QR)
+    const cardHtml = `<!doctype html>
 <html>
 <head>
-<title>${s.FullName} - ID Card</title>
-<script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>${escapeHtml(s.FullName)} — ID Card</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
 <style>
-body {
-    background: #eef3ff;
-    font-family: 'Quicksand', sans-serif;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    padding:30px;
-}
-
-@media print {
+  :root{ --primary:#0b5ed7; --card-w:328px; --card-h:205px; }
+  body{ font-family: Poppins, sans-serif; background:#eef4ff; margin:0; padding:28px; display:flex; align-items:center; justify-content:center; min-height:100vh; }
+  /* print only the card */
+  @media print {
     body * { visibility:hidden; }
     #idcard, #idcard * { visibility:visible; }
-    #idcard { position:absolute; left:50%; top:10px; transform:translateX(-50%); }
-}
-
-/* ID Card */
-.id-card {
-    width: 328px;
-    height: 205px;
+    #idcard { position:absolute; left:50%; top:20px; transform:translateX(-50%); }
+  }
+  .id-card {
+    width: var(--card-w);
+    height: var(--card-h);
     background:#fff;
-    border-radius:18px;
-    border:4px solid #0b5ed7;
-    box-shadow:0 8px 25px rgba(0,0,0,0.25), inset 0 0 12px rgba(0,0,0,0.28);
+    border-radius:16px;
+    border:4px solid var(--primary);
+    box-shadow: 0 10px 30px rgba(0,0,0,0.25), inset 0 0 12px rgba(0,0,0,0.06);
     overflow:hidden;
-    text-align:center;
     position:relative;
-}
-
-/* Watermark */
-.watermark {
+    text-align:center;
+  }
+  /* circular watermark (placeholder) */
+  .watermark {
     position:absolute;
-    width:120px;
-    height:120px;
-    background:url('https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png') center/contain no-repeat;
+    width:120px; height:120px;
+    top:36%; left:50%;
+    transform:translate(-50%,-50%);
+    background-image:url('https://i.ibb.co/7SRxgqT/round-placeholder.png');
+    background-size:contain;
+    background-repeat:no-repeat;
     opacity:0.10;
-    top:36%;
-    left:50%;
-    transform:translate(-50%, -50%);
-}
-
-/* Header */
-.id-header {
-    background: linear-gradient(90deg, #0b5ed7, #74b9ff);
-    color:white;
-    padding:6px;
-}
-.id-header h5 { margin:0; font-size:14px; font-weight:700; }
-
-/* Photo */
-.id-photo {
-    width:72px;
-    height:72px;
     border-radius:50%;
-    border:3px solid white;
-    object-fit:cover;
-    margin-top:10px;
-}
+    pointer-events:none;
+    z-index:0;
+  }
+  .id-header { background:linear-gradient(90deg,var(--primary),#6fb6ff); color:#fff; padding:6px 8px; z-index:2; position:relative; }
+  .id-header h4{ margin:0; font-size:13px; font-weight:700; }
+  .id-header small{ display:block; font-size:9px; opacity:0.95; margin-top:2px; }
 
-/* Name */
-.name {
-    font-size:14px;
-    font-weight:700;
-    color:#0b5ed7;
-}
+  .photo { width:74px; height:74px; border-radius:50%; object-fit:cover; border:3px solid #fff; margin-top:10px; box-shadow:0 3px 10px rgba(0,0,0,0.28); z-index:2; position:relative; }
 
-.info p {
-    font-size:10px;
-    margin:1px 0;
-}
+  .fullname { color:var(--primary); font-weight:700; margin-top:6px; font-size:14px; z-index:2; position:relative; }
+  .info { font-size:10px; line-height:12px; margin-top:4px; z-index:2; position:relative; padding:0 12px; text-align:left; }
+  .info p { margin:2px 0; color:#222; }
 
-/* QR */
-#qrcode canvas {
-    width:40px !important;
-    height:40px !important;
-}
+  .controls { margin-top:14px; display:flex; gap:10px; align-items:center; justify-content:center; }
+  .btn-print, .btn-home { padding:8px 16px; border-radius:24px; font-weight:600; border:0; cursor:pointer; }
+  .btn-print { background:#fff; color:var(--primary); border:2px solid var(--primary); }
+  .btn-home { background:var(--primary); color:#fff; }
 
-.btn-print, .btn-home {
-    margin-top:20px;
-    width:200px;
-    border-radius:30px;
-    padding:10px;
-    font-weight:600;
-}
-
-.btn-home { background:#0b5ed7; color:white; }
+  /* small screens */
+  @media (max-width:420px){
+    body { padding:10px; }
+    .id-card { transform:scale(0.9); transform-origin:center top; }
+  }
 </style>
-
 </head>
 <body>
 
-<div id="idcard" class="id-card">
-
-    <div class="watermark"></div>
+  <div id="idcard" class="id-card" role="region" aria-label="Student ID card">
+    <div class="watermark" aria-hidden="true"></div>
 
     <div class="id-header">
-        <h5>NOORUSSALAM SECONDARY MADRASA</h5>
-        <small>Kambippalam Kerala Estate</small>
-        <small>Under SKIMVB | Reg No: 6110</small>
-        <small>Web site:www.noorussalammadrasa.online</small>
+      <h4>NOORUSSALAM SECONDARY MADRASA</h4>
+      <small>Kambippalam - Kerala Estate</small>
+      <small>Under SKIMVB | Reg No: 6110</small>
     </div>
 
-    <img src="${s.PhotoURL}" class="id-photo">
-    <div class="name">${s.FullName}</div>
+    <img src="${escapeHtml(s.PhotoURL)}" alt="Student photo" class="photo">
+
+    <div class="fullname">${escapeHtml(s.FullName)}</div>
 
     <div class="info">
-        <p><b>UID:</b> ${s.UID}</p>
-        <p><b>Admission No:</b> ${s.AdmissionNumber}</p>
-        <p><b>Father’s Name:</b> ${s.FatherName}</p>
-        <p><b>Class:</b> ${s.ClassLevel}</p>
-        <p><b>Roll No:</b> ${s.RollNumber}</p>
-        <p><b>Phone:</b> ${s.Phone}</p>
-        <p><b>Address:</b> ${s.Address}</p>
+      <p><strong>UID:</strong> ${escapeHtml(s.UID)}</p>
+      <p><strong>Admission No:</strong> ${escapeHtml(s.AdmissionNumber)}</p>
+      <p><strong>Father's Name:</strong> ${escapeHtml(s.FatherName)}</p>
+      <p><strong>Class:</strong> ${escapeHtml(s.ClassLevel)}</p>
+      <p><strong>Roll No:</strong> ${escapeHtml(s.RollNumber)}</p>
+      <p><strong>Phone:</strong> ${escapeHtml(s.Phone)}</p>
+      <p><strong>Address:</strong> ${escapeHtml(s.Address)}</p>
     </div>
 
-    <div id="qrcode"></div>
-</div>
+    <div style="height:6px;"></div>
+  </div>
 
-<button onclick="window.print()" class="btn btn-outline-primary btn-print">Print ID Card</button>
-
-<a href="index.html">
-<button class="btn-home">Back to Home</button>
-</a>
-
-<script>
-QRCode.toCanvas(
-  document.getElementById("qrcode"),
-  "UID: ${s.UID}\\nName: ${s.FullName}",
-  { width: 40 }
-);
-</script>
+  <div class="controls">
+    <button class="btn-print" onclick="window.print()">Print ID Card</button>
+    <button class="btn-home" onclick="window.location.href='${location.pathname}'">Back to Home</button>
+  </div>
 
 </body>
-</html>
-        `;
+</html>`;
 
-        win.document.open();
-        win.document.write(html);
-        win.document.close();
+    // write full HTML into new tab
+    win.document.open();
+    win.document.write(cardHtml);
+    win.document.close();
 
-    } catch (err) {
-        win.document.body.innerHTML =
-            "<h3 style='color:red;text-align:center;'>Error fetching data.</h3>";
-    }
+  } catch (err) {
+    console.error(err);
+    win.document.body.innerHTML = `<div style="text-align:center;color:#b00;font-family:Poppins;padding:30px;">
+      <h3>Error fetching data</h3><p>Please check your Apps Script deployment and console for details.</p></div>`;
+  }
 });
-</script>
 
+/* small helper to avoid HTML injection in template */
+function escapeHtml(str){
+  if (!str && str !== 0) return '';
+  return String(str)
+    .replaceAll('&','&amp;')
+    .replaceAll('<','&lt;')
+    .replaceAll('>','&gt;')
+    .replaceAll('"','&quot;')
+    .replaceAll("'",'&#39;');
+}
+</script>
 </body>
 </html>
