--- a/idcard.html
+++ b/idcard.html
@@ -2,44 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta-name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ID Card Generator | Noorussalam Madrasa</title>
 
-  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Merienda:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <style>
     body {
       background: linear-gradient(135deg, #0b5ed7 0%, #74b9ff 100%);
       font-family: 'Poppins', sans-serif;
-      min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      min-height: 100vh;
       padding: 30px;
     }
 
-    /* FORM */
+    /* FORM DESIGN */
     .id-form {
       background: #fff;
       border-radius: 15px;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.2);
       padding: 30px;
       width: 100%;
       max-width: 420px;
       text-align: center;
-      margin-bottom: 40px;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.25);
       animation: fadeIn 0.8s ease;
     }
-    .id-form h2 {
-      color: #0b5ed7;
-      font-weight: 700;
-      margin-bottom: 15px;
-    }
+    .id-form img { margin-bottom: 10px; }
+    .id-form h2 { color: #0b5ed7; font-weight: 700; }
+    .id-form p { font-size: 14px; color: #555; }
+
     .id-form button {
       background: #0b5ed7;
       border: none;
@@ -48,198 +43,200 @@
       border-radius: 8px;
       font-weight: 600;
       color: #fff;
+      margin-top: 8px;
+      transition: 0.3s;
     }
+    .id-form button:hover { background: #0849a2; }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
+      from { opacity: 0; transform: translateY(-12px); }
+      to   { opacity: 1; transform: translateY(0); }
     }
   </style>
-</head>
 
+</head>
 <body>
 
-  <!-- Input Form -->
+  <!-- FORM -->
   <div class="id-form">
-    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="80">
+    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="85" />
     <h2>NOORUSSALAM MADRASA</h2>
-    <p>Enter Class & Roll Number to generate the ID Card</p>
+    <p>Enter your Class and Roll Number to generate your digital ID card</p>
 
     <form id="idForm">
       <div class="mb-3 text-start">
         <label class="form-label">Class</label>
-        <input type="text" name="class" class="form-control" required>
+        <input type="text" name="class" class="form-control" placeholder="Enter Class" required>
       </div>
 
       <div class="mb-3 text-start">
         <label class="form-label">Roll Number</label>
-        <input type="text" name="roll" class="form-control" required>
+        <input type="text" name="roll" class="form-control" placeholder="Enter Roll Number" required>
       </div>
 
       <button type="submit">Generate Digital ID Card</button>
     </form>
   </div>
 
+
 <script>
-const scriptURL =
- "https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec";
+const scriptURL = 'https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec';
 
 document.getElementById('idForm').addEventListener('submit', e => {
-  e.preventDefault();
 
+  e.preventDefault();
   const formData = new FormData(e.target);
-  const classVal = formData.get('class');
-  const rollVal = formData.get('roll');
+
+  const classVal = formData.get("class");
+  const rollVal  = formData.get("roll");
 
   const url = `${scriptURL}?class=${encodeURIComponent(classVal)}&roll=${encodeURIComponent(rollVal)}`;
 
-  const newWin = window.open("", "_blank");
-  newWin.document.write("<h3 style='text-align:center;color:#0b5ed7;'>Loading ID Card...</h3>");
+  const win = window.open("", "_blank");
+  win.document.write("<h3 style='text-align:center;color:#0b5ed7;font-family:Poppins;'>Loading ID Card...</h3>");
 
   fetch(url)
-    .then(res => res.json())
+    .then(r => r.json())
     .then(data => {
-      if (data.result === 'success') {
-        const s = data.student;
 
-        const qrData = `UID:${s.UID}, Admission:${s.AdmissionNumber}, Name:${s.FullName}`;
-        const qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qrData)}&size=110x110`;
-
-        const html = `
-<!DOCTYPE html>
-<html>
-<head>
-  <title>${s.FullName} | ID Card</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap" rel="stylesheet">
-
-  <style>
-    body {
-      background: #eef3ff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      padding: 0;
-      font-family: 'Merienda', cursive;
-    }
-
-    /* ID CARD SIZE (Actual card size) */
-    .id-card {
-      width: 320px;
-      height: 520px;
-      background: white;
-      border-radius: 18px;
-      box-shadow: 0 6px 25px rgba(0,0,0,0.25);
-      border: 6px double #0b5ed7;  /* 3D Border */
-      position: relative;
-      overflow: hidden;
-      padding-bottom: 20px;
-    }
-
-    /* Logo Watermark */
-    .id-card::before {
-      content: "";
-      position: absolute;
-      background: url('https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png') center/60% no-repeat;
-      opacity: 0.08;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      z-index: 1;
-    }
-
-    .content { position: relative; z-index: 5; }
-
-    .header {
-      background: linear-gradient(90deg, #0b5ed7, #74b9ff);
-      padding: 10px;
-      text-align: center;
-      color: white;
-      border-bottom: 3px solid #0849a2;
-    }
-
-    .header h4 { margin: 0; font-size: 18px; font-weight: 700; }
-
-    .photo {
-      width: 110px;
-      height: 110px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin: 15px auto 5px;
-      display: block;
-      border: 4px solid #fff;
-      box-shadow: 0 0 12px rgba(0,0,0,0.3);
-    }
-
-    p { margin: 3px 0; }
-
-    .btn-area {
-      margin-top: 15px;
-      text-align: center;
-    }
-
-    .btn-print, .btn-home {
-      padding: 8px 18px;
-      border-radius: 7px;
-      border: none;
-      color: #fff;
-      font-weight: 600;
-      margin: 4px;
-    }
-
-    .btn-print { background:#0b5ed7; }
-    .btn-home { background:#6c757d; }
-
-    /* HIDE BUTTONS IN PRINT */
-    @media print {
-      .btn-area { display: none !important; }
-      body { background: white; }
-    }
-  </style>
-</head>
-
-<body>
-
-<div class="id-card">
-  <div class="content">
-    <div class="header">
-      <h4>NOORUSSALAM SECONDARY MADRASA</h4>
-      <small>Kambippalam Kerala Estate</small>
-    </div>
-
-    <img src="${s.PhotoURL || 'https://via.placeholder.com/120'}" class="photo">
-
-    <p><b>Name:</b> ${s.FullName}</p>
-    <p><b>UID:</b> ${s.UID}</p>
-    <p><b>Admission No:</b> ${s.AdmissionNumber}</p>
-    <p><b>Father:</b> ${s.FatherName}</p>
-    <p><b>Class:</b> ${s.ClassLevel}</p>
-    <p><b>Roll No:</b> ${s.RollNumber}</p>
-    <p><b>Phone:</b> ${s.Phone}</p>
-
-    <div style="text-align:center; margin-top:10px;">
-      <img src="${qrURL}">
-    </div>
-
-    <div class="btn-area">
-      <button class="btn-print" onclick="window.print()">Print ID Card</button>
-      <button class="btn-home" onclick="window.location.href='/'">Back Home</button>
-    </div>
-  </div>
-</div>
-
-</body>
-</html>
-        `;
-
-        newWin.document.open();
-        newWin.document.write(html);
-        newWin.document.close();
+      if (data.result !== "success") {
+        win.document.body.innerHTML = `<h3 style='color:red;text-align:center;'>${data.message}</h3>`;
+        return;
       }
+
+      const s = data.student;
+
+      const qrText = `UID:${s.UID}, Name:${s.FullName}, Class:${s.ClassLevel}, Roll:${s.RollNumber}`;
+      const qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qrText)}&size=120x120`;
+
+      const html = `
+      <html>
+      <head>
+        <title>${s.FullName} - ID Card</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+        <style>
+          body {
+            background: #eef3ff;
+            display: flex;
+            justify-content: center;
+            padding: 40px;
+            font-family: 'Poppins';
+          }
+
+          .id-card {
+            width: 340px;
+            border-radius: 18px;
+            padding: 15px;
+            background: white;
+            box-shadow: 0 6px 25px rgba(0,0,0,0.25);
+            border: 4px solid #0b5ed7;
+            position: relative;
+          }
+
+          .id-card:before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            background: url('https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png') center/65% no-repeat;
+            opacity: 0.08;
+          }
+
+          .header {
+            text-align: center;
+            padding-bottom: 10px;
+          }
+
+          .header h4 {
+            margin: 0;
+            font-weight: 700;
+            color: #0b5ed7;
+          }
+
+          .student-photo {
+            width: 105px;
+            height: 105px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 4px solid #0b5ed7;
+            display: block;
+            margin: 8px auto;
+            background: #fff;
+          }
+
+          .info p {
+            margin: 3px 0;
+            font-size: 14px;
+          }
+
+          .qr {
+            text-align: center;
+            margin-top: 12px;
+          }
+
+          .actions {
+            margin-top: 15px;
+            text-align: center;
+          }
+
+          .actions button {
+            padding: 8px 18px;
+            border: none;
+            border-radius: 8px;
+            margin: 5px;
+            font-weight: 600;
+            cursor: pointer;
+          }
+
+          .print-btn { background: #0b5ed7; color: white; }
+          .back-btn { background: #6c757d; color: white; }
+
+          @media print {
+            .actions { display: none !important; }
+            body { background: white; }
+          }
+        </style>
+      </head>
+
+      <body>
+        <div class="id-card">
+
+          <div class="header">
+            <h4>NOORUSSALAM SECONDARY MADRASA</h4>
+            <small>Kambippalam, Kerala Estate</small><br>
+            <small>Academic Year 2025–26</small>
+          </div>
+
+          <img src="${s.PhotoURL || 'https://via.placeholder.com/120'}" class="student-photo">
+
+          <div class="info text-center">
+            <p><b>Name:</b> ${s.FullName}</p>
+            <p><b>UID:</b> ${s.UID}</p>
+            <p><b>Admission No:</b> ${s.AdmissionNumber}</p>
+            <p><b>Class:</b> ${s.ClassLevel}</p>
+            <p><b>Roll No:</b> ${s.RollNumber}</p>
+            <p><b>Father:</b> ${s.FatherName}</p>
+            <p><b>Phone:</b> ${s.Phone}</p>
+          </div>
+
+          <div class="qr">
+            <img src="${qrURL}" width="110">
+          </div>
+
+          <div class="actions">
+            <button class="print-btn" onclick="window.print()">Print ID Card</button>
+            <button class="back-btn" onclick="window.location.href='/'">Back to Home</button>
+          </div>
+
+        </div>
+      </body>
+      </html>
+      `;
+
+      win.document.open();
+      win.document.write(html);
+      win.document.close();
     });
 });
 </script>
